--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,14 +18,16 @@
             android:launchMode="singleTask"
             android:exported="true">
 
+          <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
+              <action android:name="android.intent.action.VIEW" />
               <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <!-- Handle custom scheme -->
-                <data android:scheme="dapi" android:host="localhost"/>
+              <data android:scheme="dapi" android:host="localhost" android:pathPrefix="/home"/>
             </intent-filter>
 
         </activity>
