--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,9 +3,5 @@
   "integrations": {
     "capacitor": {}
   },
-  "type": "angular",
-  "ssl": {
-    "key": "E:\\ssl\\key.pem",
-    "cert": "E:\\ssl\\ssl\\cert.pem"
-  }
+  "type": "angular"
 }
