--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "io": "ionic serve",
+    "etc": "npx cap open android",
+    "appBuild": "ionic build",
+    "appSync": "npx cap sync android",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -24,14 +28,15 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/assets": "^3.0.5",
+    "@capacitor/browser": "^6.0.3",
     "@capacitor/core": "6.1.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
-    "keycloak-angular": "^16.0.1",
-    "keycloak-js": "^25.0.0",
+    "keycloak-angular": "16.0.1",
+    "keycloak-js": "25.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -51,6 +56,7 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
